<resources>
    <string name="app_name">OnBeat</string>
    <string name="common_text_no_internet_connection_message">No Internet Connection Available.</string>
    <string name="common_text_api_failure_message">Unable to connect with server please try again later.</string>
    <string name="retry">Retry</string>
    <string name="no_data_found">No data</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="register_or_log_in">Register or Login</string>
    <string name="phone">Phone</string>
    <string name="social_media">Social Media</string>
    <string name="enter_phone_number">Mobile No.</string>
    <string name="enter_phone_number1">Enter phone number</string>
    <string name="agreed_onbeat_terms_service">New users: By signing up, I confirm that I have read and agreed to Onbeat’s<font color='#51AADF'> User agreement &amp; Terms of service.</font></string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="next">Next</string>
    <string name="code_send_again">Didn\'t receive the code?</string>
    <string name="set_a_passcode">Set a passcode</string>
    <string name="enter_sms">Enter code we texted you.</string>
    <string name="this_code_easy_access">Set a passcode to help protect your data</string>
    <string name="set_faceid">Set FaceID</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="fac_id_se_eassy">Next time you\'ll open the app, you can use TouchID to make it even easier and more secure.</string>
    <string name="use_face_id">Do you want to use\nTouchID to access the app?</string>
    <string name="following_this_step">Let\'s get you ready to enjoy the OnBeat in these 2 easy steps...</string>
    <string name="step1">1. Scan your wristband</string>
    <string name="step2">1. Set your balance</string>
    <string name="step3">2. Add a payment method</string>
    <string name="let_s_do_this">Let\'s do this?</string>
    <string name="begin">Begin</string>
    <string name="i_ll_do_this_later">I\'ll do this later</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="scan_qr_wristband">Scan QR code on wristband</string>
    <string name="set_spending_limit">Let’s top up your wallet!</string>
    <string name="spending_limit">Spending limit</string>
    <string name="spend_limit_add_more_later">Tell us how much you want to spend\nso we can party!</string>
    <string name="add_card">Add card</string>
    <string name="add_card_normal">Add payment card</string>
    <string name="pay_you_spend_spend">Please specify the credit or debit card you want to add funds with</string>
    <string name="enjoy_your_festival">Enjoy OnBeat</string>
    <string name="congrats_enjoy_your_festival">That\'s you all set up. Enjoy!</string>
    <string name="let_s_go">Lets go !</string>
    <string name="login">Login</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="enter_otp">Enter verification code</string>
    <string name="send_otp_again">Send code again</string>
    <string name="confirm">Confirm</string>
    <string name="successfully_set_passcode">Successfully set passcode</string>
    <string name="passcode_set">Passcode set</string>
    <string name="dashboard">Wallet\n\n</string>
    <string name="account">Account</string>
    <string name="event_info">Event info</string>
    <string name="contact">Contact</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="wrist_blance">Wristband balance</string>
    <string name="currency_symple">£</string>
    <string name="total_spent">Total spent</string>
    <string name="transactions">Transactions</string>
    <string name="see_all">See all</string>
    <string name="set_new_spending_limit">+ Top up your wallet</string>
    <string name="add_band">+ Add wristband</string>
    <string name="unlink_ticket">Unlink your ticket</string>
    <string name="unlink_ticket1">Unlink your ticket?</string>
    <string name="unlink_ticket_bt">Unlink</string>
    <string name="add_card_and_spending_limit">+ Add card and Top up your wallet</string>
    <string name="entet_pin">Enter 4 digit passcode</string>
    <string name="entet_pin1">Enter 4 digit passcode to continue.</string>
    <string name="not_match_pin">New and confirm passcode doesn\'t match</string>
    <string name="forgot_pin">Forgot passcode</string>
    <string name="forgot_pass">Forgot passcode?</string>
    <string name="entet_old_pass">Enter old passcode</string>
    <string name="entet_newPass">Enter 4 digit new passcode</string>
    <string name="facebook_app_id">192533772839048</string>
    <string name="fb_login_protocol_scheme">fb192533772839048</string>
    <string name="or_login_with">Or login with</string>
    <string name="or">Or</string>
    <string name="user_name">User name</string>
    <string name="name">Name</string>
    <string name="contact_details">Please fill in your details below:</string>
    <string name="unverified">Unverified</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="wanna_use_a_different_card_add_card">Want to use a different card? <font color='#DB6F57'>Add new card</font></string>
    <string name="add_card1">Add new card</string>
    <string name="what_is_on">What is OnBeat?</string>
    <string name="about_pre_auth">About pre-authorisation</string>
    <string name="security">Security</string>
    <string name="passcode">Passcode</string>
    <string name="face_id">Touch ID</string>
    <string name="setup_limit">Setup my spending limit</string>
    <string name="your_wristband">Your wristband</string>
    <string name="your_ticket">Your ticket </string>
    <string name="passcode_not_match">Passcode doesn\'t match! Try again</string>
    <string name="add_a_wristband">Add a wristband</string>
    <string name="add_band_continue">Scan wristband QR code or enter wristband number to continue.</string>
    <string name="ticket_band_continue">Scan ticket QR code or enter ticket number to continue</string>
    <string name="band_connected">Wristband connected</string>
    <string name="wristband_not_connected">Wristband not connected</string>
    <string name="cancel">Cancel</string>
    <string name="settl_all"><font color='#9F07C8'>This will settle all existing payments and pre-authorise a new balance to spend. Your current available funds will be replaced by this new amount.</font> <font color='#51AADF'><u> Find out more.</u></font></string>
    <string name="scan_your_card">Scan your card</string>
    <string name="invest_onbeat">Invest in OnBeat</string>
    <string name="addCardFind"><font color='#9F07C8'>We will pre-authorise money on your card to add to your wallet… but don’t worry, you’ll only pay for what you spend</font> <font color='#51AADF'><u> Find out more.</u></font></string>
    <string name="download_transaction">Download transaction history</string>
    <string name="event_closed">Our event is now closed!</string>
    <string name="event_enjoy">We hope you enjoyed your time with us. You can still access your full transaction history for this festival.</string>
    <string name="trouble_shoot">Having trouble downloading the file?\n<font color='#51AADF'><u>Contact us.</u></font></string>
    <string name="what_s_onbeat"><font color='#51AADF'><u>What is OnBeat?</u></font></string>
    <string name="what_s_next">What’s next?</string>
    <string name="event_missed">If you missed our last event or just excited in what we are preparing next, check the app for updates.\n\nWant to be part of our exciting journey?</string>
    <string name="top_up">Top up</string>
    <string name="update">Update</string>
    <string name="update_app">Update OnBeat ? </string>
    <string name="update_app_txt">OnBeat App has changed! Please update to the latest version to enjoy all new features!</string>
</resources>