<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="MissingConstraints"
    android:padding="@dimen/pageMargin"
    android:background="@drawable/bg_white">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/update_app"
        android:theme="@style/BoldSubText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/txtDes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btCancel"
        android:text="@string/update_app_txt"
        android:layout_marginTop="@dimen/_10sdp"
       android:theme="@style/SmallText"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btCancel"
        android:layout_width="0dp"
        android:layout_height="@dimen/buttonHeight"
         android:background="@drawable/bg_white_gray_line"
        android:text="@string/cancel"
        android:textColor="@color/gray"
        android:fontFamily="@font/roboto_bold"
        android:textStyle="bold"
        android:textSize="@dimen/_13sdp"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/txtDes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btUpdate"
        android:layout_marginEnd="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_20sdp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btUpdate"
        android:layout_width="0dp"
        android:layout_height="@dimen/buttonHeight"
         android:background="@drawable/bg_orangr_bt"
        android:text="@string/update"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_bold"
        android:textSize="@dimen/buttonText"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/txtDes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btCancel"
        android:layout_marginStart="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_20sdp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>