<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/pageMargin"
    tools:ignore="MissingConstraints">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containToolBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/topBar"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btBack"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/ic_back"
            app:layout_constraintTop_toTopOf="@+id/txtTitle"
            app:layout_constraintBottom_toBottomOf="@+id/txtTitle"
            android:paddingEnd="10dp"
            android:tint="@color/black"/>

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Add card and top up"
            android:theme="@style/HeadText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/containText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/containButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containToolBar">


        <TextView
            android:id="@+id/tvTextAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:theme="@style/SubText"
            android:gravity="center"
            android:text="Top up will pre-authorise £XXX\non your card" />

        <LinearLayout
            android:id="@+id/containNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/bg_vilot"
            android:gravity="center|top"
            android:orientation="horizontal"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="3dp"
                android:src="@drawable/ic_warning" />

            <TextView
                android:id="@+id/txtFundAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
               android:theme="@style/SmallText"
                android:text="@string/addCardFind" />

            <TextView
                android:id="@+id/txtSetil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/settl_all"
                android:textSize="@dimen/_13sdp"
                android:visibility="gone" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/btScanCard"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/buttonHeight"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/bg_gray_button"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/SubText"
                        android:text="@string/scan_your_card"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:src="@drawable/ic_camera_scan" />

                </LinearLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:background="#CCCCCC">

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@color/white"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:text="Or"
                        android:textSize="@dimen/_15sdp"
                        android:theme="@style/SubText"/>
                </FrameLayout>

                <com.stripe.android.view.CardMultilineWidget
                    android:id="@+id/cardInputWidget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btScan" />


            </LinearLayout>

        </ScrollView>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/containButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containText">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btSkip"
            android:layout_width="match_parent"
            android:layout_height="@dimen/buttonHeight"
            android:layout_marginEnd="@dimen/_6sdp"
            android:layout_weight="0.1"
            android:background="@drawable/bg_white_gray_line"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/gray"
            android:textSize="@dimen/buttonText"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btNext"
            android:layout_width="match_parent"
            android:layout_height="@dimen/buttonHeight"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_weight="0.1"
            android:background="@drawable/bg_gray_button"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/top_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/buttonText"
            android:textStyle="bold" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>